--- a/ananth.css
+++ b/ananth.css
@@ -33,7 +33,7 @@ body, html{height: 100%; width: 100%; color: white;}
   margin-bottom: 3px;
   text-decoration: none;
   text-align: center;
-  font-size: 3vh;
+  font-size: 3vw;
 }
 /* Active/current link */
 .sidebar a.active {
